# TextAnalyzer

./: CMakeLists.txt  CodeBlocks.workspace  HashFunctions.h  TextAnalyzer.c  TextAnalyzer.cbp  TextAnalyzer.cpp  TextAnalyzer.h  WordCollection.c  WordCollection.cpp  WordCollection.h
src/TextAnalyzer/: HashFunctions.c  MarkovTextChains.c  MarkovTextChains.h  TextAnalyzer.c  TextAnalyzer.h  WordCollection.c  WordCollection.h
